--- a/Problemas/E12_3ii.html
+++ b/Problemas/E12_3ii.html
@@ -118,6 +118,7 @@ k=1;
 <span class="keyword">end</span>
 hold <span class="string">on</span>;
 fcontour(F_x)
+title(<span class="string">'Imagen con interaciones saltadas para mostrar la convergencia'</span>)
 plot(X_p(:,1),X_p(:,2))
 </pre><img vspace="5" hspace="5" src="E12_3ii_01.png" alt=""> <img vspace="5" hspace="5" src="E12_3ii_02.png" alt=""> <p class="footer"><br><a href="https://www.mathworks.com/products/matlab/">Published with MATLAB&reg; R2021b</a><br></p></div><!--
 ##### SOURCE BEGIN #####
@@ -172,6 +173,7 @@ for i=1:50:2500
 end
 hold on;
 fcontour(F_x)
+title('Imagen con interaciones saltadas para mostrar la convergencia')
 plot(X_p(:,1),X_p(:,2))
 ##### SOURCE END #####
 --></body></html>
